--- a/package.json
+++ b/package.json
@@ -6,12 +6,15 @@
     "start": "babel-node src/index.js"
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "chalk": "^4.1.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "http-proxy-middleware": "^2.0.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.2",
     "morgan": "^1.10.0",
+    "parse-torrent": "^9.1.3",
     "querystring": "^0.2.1"
   },
   "devDependencies": {
