--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "bencode": "^2.0.1",
     "body-parser": "^1.19.0",
     "chalk": "^4.1.1",
     "cors": "^2.8.5",
