--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "memoizee": "^0.4.15",
     "mongoose": "^5.13.2",
     "morgan": "^1.10.0",
-    "parse-torrent": "^9.1.3",
+    "multer": "^1.4.2",
     "querystring": "^0.2.1"
   },
   "devDependencies": {
