--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "mongoose": "^5.13.2",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
+    "node-fetch": "^2.6.1",
     "querystring": "^0.2.1"
   },
   "devDependencies": {
