--- a/.eslintrc
+++ b/.eslintrc
@@ -2,6 +2,7 @@
   "extends": [
     "eslint:recommended",
     "plugin:prettier/recommended",
+    "plugin:react/recommended"
   ],
 
   "rules": {
@@ -9,7 +10,8 @@
   },
   "env": {
     "es6": true,
-    "node": true
+    "node": true,
+    "browser": true
   },
   "parserOptions": {
     "sourceType": "module",
