--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^10.0.0",
     "next": "12.0.4",
     "react": "17.0.2",
+    "react-cookie": "^4.1.1",
     "react-dom": "17.0.2",
     "styled-components": "^5.3.3",
     "styled-system": "^5.1.5"
