--- a/client/package.json
+++ b/client/package.json
@@ -16,7 +16,8 @@
     "react-cookie": "^4.1.1",
     "react-dom": "17.0.2",
     "styled-components": "^5.3.3",
-    "styled-system": "^5.1.5"
+    "styled-system": "^5.1.5",
+    "jsonwebtoken": "^8.5.1"
   },
   "devDependencies": {
     "eslint": "7",
