--- a/client/package.json
+++ b/client/package.json
@@ -11,13 +11,13 @@
   "dependencies": {
     "@styled-system/css": "^5.1.5",
     "dotenv": "^10.0.0",
+    "jsonwebtoken": "^8.5.1",
     "next": "12.0.4",
     "react": "17.0.2",
     "react-cookie": "^4.1.1",
     "react-dom": "17.0.2",
     "styled-components": "^5.3.3",
-    "styled-system": "^5.1.5",
-    "jsonwebtoken": "^8.5.1"
+    "styled-system": "^5.1.5"
   },
   "devDependencies": {
     "eslint": "7",
