--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,8 @@
     "@styled-system/css": "^5.1.5",
     "dotenv": "^10.0.0",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.21",
+    "moment": "^2.29.1",
     "next": "12.0.4",
     "react": "17.0.2",
     "react-cookie": "^4.1.1",
