--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "next": "12.0.4",
+    "polished": "^4.1.3",
     "react": "17.0.2",
     "react-cookie": "^4.1.1",
     "react-dom": "17.0.2",
