--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "moment": "^2.29.1",
     "next": "12.0.4",
     "polished": "^4.1.3",
+    "pretty-bytes": "^5.6.0",
     "react": "17.0.2",
     "react-cookie": "^4.1.1",
     "react-dom": "17.0.2",
