--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
   ],
   "scripts": {
     "api:dev": "yarn workspace @sqtracker/api dev",
-    "client:dev": "yarn workspace @sqtracker/client dev"
+    "client:dev": "yarn workspace @sqtracker/client dev",
+    "dev": "npm-run-all --parallel api:dev client:dev"
+  },
+  "devDependencies": {
+    "npm-run-all": "^4.1.5"
   }
 }
