--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "@styled-icons/boxicons-regular": "^10.38.0",
     "@styled-icons/boxicons-solid": "^10.38.0",
     "@styled-system/css": "^5.1.5",
+    "copy-to-clipboard": "^3.3.1",
     "dotenv": "^10.0.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
