--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "react": "17.0.2",
     "react-cookie": "^4.1.1",
     "react-dom": "17.0.2",
+    "react-dropzone": "^11.4.2",
     "styled-components": "^5.3.3",
     "styled-system": "^5.1.5"
   },
