--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,8 @@
     "react-cookie": "^4.1.1",
     "react-dom": "17.0.2",
     "react-dropzone": "^11.4.2",
+    "react-markdown": "^7.1.2",
+    "remark-gfm": "^3.0.1",
     "styled-components": "^5.3.3",
     "styled-system": "^5.1.5"
   },
