--- a/.eslintrc
+++ b/.eslintrc
@@ -6,7 +6,8 @@
   ],
 
   "rules": {
-    "object-curly-spacing": ["error", "always"]
+    "object-curly-spacing": ["error", "always"],
+    "react/prop-types": 0
   },
   "env": {
     "es6": true,
