--- a/api/package.json
+++ b/api/package.json
@@ -21,7 +21,8 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
     "node-fetch": "^2.6.1",
-    "querystring": "^0.2.1"
+    "querystring": "^0.2.1",
+    "slugify": "^1.6.5"
   },
   "devDependencies": {
     "@babel/core": "^7.14.6",
