--- a/api/package.json
+++ b/api/package.json
@@ -21,6 +21,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
     "node-fetch": "^2.6.1",
+    "nodemailer": "^6.7.8",
     "querystring": "^0.2.1",
     "slugify": "^1.6.5"
   },
