--- a/api/package.json
+++ b/api/package.json
@@ -11,6 +11,7 @@
     "bencode": "^2.0.1",
     "body-parser": "^1.19.0",
     "chalk": "^4.1.1",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
