move traefik config to file

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,4 +1,5 @@
 FROM node:16-alpine
+LABEL org.opencontainers.image.source=https://github.com/tdjsnelling/sqtracker
 WORKDIR /sqtracker/app
 COPY . .
 RUN yarn
