--- a/api/package.json
+++ b/api/package.json
@@ -25,7 +25,8 @@
     "node-fetch": "^2.6.1",
     "nodemailer": "^6.7.8",
     "qs": "^6.11.0",
-    "slugify": "^1.6.5"
+    "slugify": "^1.6.5",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/core": "^7.14.6",
