--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -12,5 +12,6 @@ COPY --from=builder /sqtracker/node_modules ./node_modules
 COPY --from=builder /sqtracker/public ./public
 COPY --from=builder /sqtracker/.next ./.next
 COPY --from=builder /sqtracker/next.config.js ./next.config.js
+COPY --from=builder /sqtracker/package.json ./package.json
 EXPOSE 3000
 CMD ["node_modules/.bin/next", "start", "-p", "3000"]
