--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "next": "12.2.5",
+    "pluralize": "^8.0.0",
     "polished": "^4.1.3",
     "pretty-bytes": "^5.6.0",
     "qs": "^6.11.0",
