remove svg favicon, add example mount for custom favicon

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,5 +43,7 @@ services:
       - "127.0.0.1:3000:3000"
     volumes:
       - ./config.js:/sqtracker/config.js
+      # - ./favicon.png:/sqtracker/public/favicon.png
+      # - ./favicon.ico:/sqtracker/public/favicon.ico
     depends_on:
       - api
