add sentry token build arg to build action

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,3 +53,5 @@ jobs:
           push: true
           tags: ${{ steps.meta-client.outputs.tags }}
           labels: ${{ steps.meta-client.outputs.labels }}
+          build-args: |
+            SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
