--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,4 +1,8 @@
 FROM node:16-alpine AS builder
+ARG SENTRY_AUTH_TOKEN
+ENV SENTRY_ORG=tdjsnelling
+ENV SENTRY_PROJECT=sqtracker-frontend
+ENV SENTRY_AUTH_TOKEN=${SENTRY_AUTH_TOKEN}
 WORKDIR /sqtracker
 COPY . .
 RUN yarn install
