sentry config set environment

--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,5 +1,6 @@
 FROM node:16-alpine AS builder
 ARG SENTRY_AUTH_TOKEN
+ENV NODE_ENV=production
 ENV SENTRY_ORG=tdjsnelling
 ENV SENTRY_PROJECT=sqtracker-frontend
 ENV SENTRY_AUTH_TOKEN=${SENTRY_AUTH_TOKEN}
@@ -10,6 +11,7 @@ RUN echo "{}" > /config.js
 RUN ./node_modules/.bin/next build
 
 FROM node:16-alpine
+ENV NODE_ENV=production
 LABEL org.opencontainers.image.source=https://github.com/tdjsnelling/sqtracker
 WORKDIR /sqtracker/client
 COPY --from=builder /sqtracker/node_modules ./node_modules
