--- a/api/package.json
+++ b/api/package.json
@@ -26,8 +26,10 @@
     "multer": "^1.4.2",
     "node-fetch": "^2.6.1",
     "nodemailer": "^6.7.8",
+    "qrcode": "^1.5.1",
     "qs": "^6.11.0",
     "slugify": "^1.6.5",
+    "speakeasy": "^2.0.0",
     "yup": "^0.32.11"
   },
   "devDependencies": {
