--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sqtracker",
-  "version": "0.0.1",
+  "version": "1.0.0-beta.1",
   "private": true,
   "license": "GPL-3.0-only",
   "workspaces": [
