--- a/api/package.json
+++ b/api/package.json
@@ -15,6 +15,7 @@
     "@sentry/tracing": "^7.36.0",
     "bcrypt": "^5.0.1",
     "bencode": "^2.0.1",
+    "bittorrent-tracker": "9.19.0",
     "body-parser": "^1.19.0",
     "chalk": "^4.1.1",
     "cookie-parser": "^1.4.6",
@@ -22,7 +23,6 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-rate-limit": "^6.7.0",
-    "http-proxy-middleware": "^2.0.1",
     "jsonwebtoken": "^8.5.1",
     "memoizee": "^0.4.15",
     "mongoose": "^5.13.2",
