adds torrent editing

--- a/.eslintrc
+++ b/.eslintrc
@@ -7,7 +7,13 @@
   "rules": {
     "object-curly-spacing": ["error", "always"],
     "react/prop-types": 0,
-    "linebreak-style": "off"
+    "linebreak-style": "off",
+    "prettier/prettier": [
+      "error",
+      {
+        "endOfLine": "auto"
+      }
+    ]
   },
   "env": {
     "es6": true,
