--- a/api/package.json
+++ b/api/package.json
@@ -26,6 +26,7 @@
     "jsonwebtoken": "^8.5.1",
     "memoizee": "^0.4.15",
     "mongoose": "^5.13.2",
+    "mongoose-fuzzy-searching": "^2.0.2",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
     "node-fetch": "^2.6.1",
