--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "api:dev": "yarn workspace @sqtracker/api dev",
     "client:dev": "yarn workspace @sqtracker/client dev",
     "dev": "npm-run-all --parallel api:dev client:dev",
-    "lint": "prettier --write --ignore-path=.eslintignore '**/*.js'"
+    "lint": "prettier --write --ignore-path=.eslintignore \"**/*.{js,json}\""
   },
   "devDependencies": {
     "npm-run-all": "^4.1.5"
