--- a/api/package.json
+++ b/api/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@sqtracker/api",
-  "version": "1.0.0-beta.8",
+  "version": "1.0.0",
   "private": true,
   "license": "GPL-3.0-only",
   "scripts": {
