add missing docker compose le mount

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,7 @@ services:
       - "8080:8080"
     volumes:
       - "/var/run/docker.sock:/var/run/docker.sock:ro"
+      - ./letsencrypt:/letsencrypt
       - ./traefik.yml:/config/traefik.yml
   database:
     container_name: sq_mongodb
