--- a/api/package.json
+++ b/api/package.json
@@ -19,6 +19,7 @@
     "bittorrent-tracker": "9.19.0",
     "body-parser": "^1.19.0",
     "chalk": "^4.1.1",
+    "content-disposition": "^0.5.4",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
