docker-compose: MongoDB without AVX

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,7 +25,7 @@ services:
       - ./traefik.yml:/config/traefik.yml
   database:
     container_name: sq_mongodb
-    image: mongo:6.0
+    image: nwzz/mongo-without-avx:6.0.5-jammy
     ports:
       - "127.0.0.1:27017:27017"
     volumes:
