Fixed an issue with Docker configuration. config.js was mounted as a folder and not a file ^^

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -31,7 +31,9 @@ services:
     ports:
       - "127.0.0.1:3001:3001"
     volumes:
-      - ./config.js:/sqtracker/config.js
+      - type: bind
+        source: ./config.js
+        target: /sqtracker/config.js
     depends_on:
       - database
   client:
@@ -42,6 +44,9 @@ services:
     ports:
       - "127.0.0.1:3000:3000"
     volumes:
-      - ./config.js:/sqtracker/config.js
+      - type: bind
+        source: ./config.js
+        target: /sqtracker/config.js
     depends_on:
       - api
+
