--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,6 +23,14 @@ services:
       - "/var/run/docker.sock:/var/run/docker.sock:ro"
       - ./letsencrypt:/letsencrypt
       - ./traefik.yml:/config/traefik.yml
+#  nginx:
+#    image: "nginx:latest"
+#    container_name: "sq_nginx"
+#    restart: always
+#    ports:
+#      - "80:80"
+#    volumes:
+#      - ./nginx.conf:/etc/nginx/nginx.conf
   database:
     container_name: sq_mongodb
     image: mongo:6.0
