--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:16 AS builder
+FROM node:18.18.0 AS builder
 ARG SENTRY_AUTH_TOKEN
 ENV NODE_ENV=production
 ENV SENTRY_ORG=tdjsnelling
@@ -10,7 +10,7 @@ RUN yarn install
 RUN echo "{}" > /config.js
 RUN ./node_modules/.bin/next build
 
-FROM node:16-alpine
+FROM node:18.18.0
 ENV NODE_ENV=production
 ENV SENTRY_DSN="https://22bc43683da04040aa90e7683ffe022a@o140996.ingest.sentry.io/4504646040616960"
 LABEL org.opencontainers.image.source=https://github.com/tdjsnelling/sqtracker
