--- a/nginx.conf
+++ b/nginx.conf
@@ -13,6 +13,14 @@ http {
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header X-Forwarded-Host $server_name;
     }
+    location /app {
+      proxy_pass http://sq_api:3001;
+      proxy_redirect off;
+      proxy_set_header Host $host;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Host $server_name;
+    }
 
     location /api/ {
       rewrite /api/(.*) /$1 break;
